fixtures/typescript/test_double/should_fail/runtime_fake.ts
export class FakeUserRepository {
  get(id: string): { id: string } {
    return { id }
  }
}
